@@ -1,7 +1,7 @@
 require File.dirname(__FILE__) + '/../test_helper'
 
 class CommentDropTest < Test::Unit::TestCase
-  fixtures :contents
+  fixtures :contents, :sites
   
   def setup
     @comment = Mephisto::Liquid::CommentDrop.new(contents(:welcome_comment))
@@ -40,6 +40,8 @@ class CommentDropTest < Test::Unit::TestCase
   
   def test_should_show_filtered_text
     comment  = contents(:welcome).comments.create :body => '*test* comment', :author => 'bob', :author_ip => '127.0.0.1', :filter => 'textile_filter'
+    assert_valid comment
+    assert_equal 'textile_filter', comment.filter
     liquid   = comment.to_liquid
     assert_equal '<p><strong>test</strong> comment</p>', liquid.before_method(:body)
   end
